// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Process heading > code-h1 1`] = `
"import { createElement } from 'react'
import { useMDXComponents as _provideComponents } from 'nextra/mdx'
export const title = 'codegen.yml'
export const frontMatter = {}
export function useTOC(props) {
  return []
}
function _createMdxContent(props) {
  const _components = Object.assign(
    {
      h1: 'h1',
      code: 'code'
    },
    _provideComponents(),
    props.components
  )
  return (
    <_components.h1>
      <_components.code>{'codegen.yml'}</_components.code>
    </_components.h1>
  )
}
"
`;

exports[`Process heading > code-with-text-h1 1`] = `
"import { createElement } from 'react'
import { useMDXComponents as _provideComponents } from 'nextra/mdx'
export const title = 'codegen.yml file'
export const frontMatter = {}
export function useTOC(props) {
  return []
}
function _createMdxContent(props) {
  const _components = Object.assign(
    {
      h1: 'h1',
      code: 'code'
    },
    _provideComponents(),
    props.components
  )
  return (
    <_components.h1>
      <_components.code>{'codegen.yml'}</_components.code>
      {' file'}
    </_components.h1>
  )
}
"
`;

exports[`Process heading > dynamic-h1 1`] = `
{
  "frontMatter": {},
  "hasJsxInH1": true,
  "result": "import { createElement } from 'react'
import { useMDXComponents as _provideComponents } from 'nextra/mdx'
export const title = 'Posts Tagged with “”'
export const frontMatter = {}
import { useRouter } from 'next/router'
export const TagName = () => {
  const { tag } = useRouter().query
  return tag || null
}
export function useTOC(props) {
  return []
}
function _createMdxContent(props) {
  const _components = Object.assign(
    {
      h1: 'h1'
    },
    _provideComponents(),
    props.components
  )
  return (
    <_components.h1>
      {'Posts Tagged with “'}
      <TagName />
      {'”'}
    </_components.h1>
  )
}
",
  "title": "Posts Tagged with “”",
}
`;

exports[`Process heading > no-h1 1`] = `
"import { createElement } from 'react'
import { useMDXComponents as _provideComponents } from 'nextra/mdx'
export const title = ''
export const frontMatter = {}
export function useTOC(props) {
  return [
    {
      value: 'H2',
      id: 'h2',
      depth: 2
    }
  ]
}
function _createMdxContent(props) {
  const { toc = useTOC(props) } = props
  const _components = Object.assign(
    {
      h2: 'h2'
    },
    _provideComponents(),
    props.components
  )
  return <_components.h2 id={toc[0].id}>{toc[0].value}</_components.h2>
}
"
`;

exports[`Process heading > static-h1 1`] = `
"import { createElement } from 'react'
import { useMDXComponents as _provideComponents } from 'nextra/mdx'
export const title = 'Hello World'
export const frontMatter = {}
export function useTOC(props) {
  return []
}
function _createMdxContent(props) {
  const _components = Object.assign(
    {
      h1: 'h1'
    },
    _provideComponents(),
    props.components
  )
  return <_components.h1>{'Hello World'}</_components.h1>
}
"
`;
